# pySCENIC

./: pyproject.toml  requirements.txt  run_test_dask.py  setup.py  tox.ini
src/pyscenic/: prune.py
tests/: test_aucell.py  test_prune.py
